// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components > Map > EditProjectBounds renders correctly 1`] = `
<div
  className={undefined}
  id={undefined}
  style={undefined}
>
  <g>
    <g
      draggable={true}
      onDragEnd={[Function]}
      position={
        Array [
          38,
          -77,
        ]
      }
      type="Marker"
    />
    <g
      draggable={true}
      onDragEnd={[Function]}
      position={
        Array [
          39,
          -77,
        ]
      }
      type="Marker"
    />
    <g
      draggable={true}
      onDragEnd={[Function]}
      position={
        Array [
          39,
          -76,
        ]
      }
      type="Marker"
    />
    <g
      draggable={true}
      onDragEnd={[Function]}
      position={
        Array [
          38,
          -76,
        ]
      }
      type="Marker"
    />
  </g>
</div>
`;

exports[`Components > Map > EditRegionBounds renders correctly 1`] = `
<div
  className={undefined}
  id={undefined}
  style={undefined}
>
  <g>
    <g
      draggable={true}
      onDragEnd={[Function]}
      position={
        Array [
          -34,
          12,
        ]
      }
      type="Marker"
    />
    <g
      draggable={true}
      onDragEnd={[Function]}
      position={
        Array [
          12,
          12,
        ]
      }
      type="Marker"
    />
    <g
      draggable={true}
      onDragEnd={[Function]}
      position={
        Array [
          12,
          -34,
        ]
      }
      type="Marker"
    />
    <g
      draggable={true}
      onDragEnd={[Function]}
      position={
        Array [
          -34,
          -34,
        ]
      }
      type="Marker"
    />
  </g>
</div>
`;
